--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "morgan": "^1.10.1",
     "mssql": "^9.1.1",
     "multer": "^2.0.2",
-    "mysql2": "^3.15.3"
+    "mysql2": "^3.15.3",
+    "scribe-express-server": "file:.."
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
