--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ AZURE_STORAGE_ACCOUNT_NAME=prodaichatbotstorage
 AZURE_STORAGE_SAS_TOKEN=?sv=2024-11-04&ss=b&srt=sco&sp=rwdlacitfx&se=2035-10-06T17:58:42Z&st=2025-10-06T09:43:42Z&spr=https&sig=YetwxsDILAx346vHmWXN%2FR5GvwXCWOQOuOwhCbvry1w%3D
 # Optional: use this name or override if needed
 AZURE_CONTAINER_NAME=audio-chunks
+ALLOW_INSECURE_TLS=true
 
 PYTHON_API_BASE=https://evaascribeprod.maximeyes.com/Scribe
 # Optional if your Python service requires auth:
