--- a/.env
+++ b/.env
@@ -11,7 +11,8 @@ ENABLE_DICTATION_DB=false
 # Login credentials (used for /api/Auth/login)
 LOGIN_USERNAME=uB3Y894CSCBqzDdxmuPmSGffFrtcBLKS
 LOGIN_PASSWORD=4EiXmBJv9ghqvZBQ0LY0dmCiWFjqLq
-
+# SELF_BASE_URL=http://localhost:5000
+SELF_BASE_URL=https://scribeexpress.onrender.com
 # MSSQL
 DB_SERVER=qamysqlserver.mysql.database.azure.com
 DB_PORT=3306
