--- a/.env
+++ b/.env
@@ -21,6 +21,7 @@ DB_DATABASE=ai_chatbot_config
 DB_ENCRYPT=true
 DB_TRUST_CERT=false
 ENABLE_DICTATION_DB=true
+SELF_BASE_URL=https://scribeexpress.onrender.com
 # TLS options:
 # For Azure SQL or TLS-enabled servers, set DB_ENCRYPT=true and DB_TRUST_CERT=false
 # For local dev without a valid cert, use DB_ENCRYPT=false and DB_TRUST_CERT=true
